fixed autotest not compiling because of System.lineSeparator().repeat() and Path.of